--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -23,13 +23,13 @@
     -->
     <p>
       This is the first paragraph!
-      <br/>
+      <br />
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime ipsa
       natus totam, veniam debitis praesentium odio porro eveniet accusamus
     </p>
     <p>
       This is the second paragraph!
-      <br/>
+      <br />
       voluptates! Commodi odit necessitatibus soluta cupiditate in dignissimos
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quo
       tempore quaerat fugiat odio alias magnam ab pariatur eum! Perspiciatis
@@ -45,10 +45,10 @@
       <strong>bold</strong>. It also semantically marks text as important; this
       affects tools, like screen readers, that users with visual impairments
       will rely on to use your website.
-      <br/>
+      <br />
       The tone of voice on some screen readers will change to communicate the
       importance of the text within a strong element.
-      <br/>
+      <br />
       To define a strong element we wrap text content in a strong tag.
     </p>
 
@@ -57,7 +57,7 @@
   -->
     <p>
       The em element makes text <em>italic</em>.
-      <br/>
+      <br />
       <em
         >It also semantically places emphasis on the text, which again may
         affect things like screen readers.</em
@@ -90,13 +90,13 @@
     -->
     <p>
       This is the first paragraph!
-      <br/>
+      <br />
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime ipsa
       natus totam, veniam debitis praesentium odio porro eveniet accusamus
     </p>
     <p>
       This is the second paragraph!
-      <br/>
+      <br />
       voluptates! Commodi odit necessitatibus soluta cupiditate in dignissimos
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quo
       tempore quaerat fugiat odio alias magnam ab pariatur eum! Perspiciatis
@@ -112,10 +112,10 @@
       <strong>bold</strong>. It also semantically marks text as important; this
       affects tools, like screen readers, that users with visual impairments
       will rely on to use your website.
-      <br/>
+      <br />
       The tone of voice on some screen readers will change to communicate the
       importance of the text within a strong element.
-      <br/>
+      <br />
       To define a strong element we wrap text content in a strong tag.
     </p>
 
@@ -124,11 +124,18 @@
   -->
     <p>
       The em element makes text <em>italic</em>.
-      <br/>
+      <br />
       <em
         >It also semantically places emphasis on the text, which again may
         affect things like screen readers.</em
       >
+    </p>
+    <!--
+      Nesting and Indentation
+    -->
+    <p>
+      In the following example, the body element is the parent and the paragraph
+      is the child.
     </p>
   </body>
 </html>
