pages and images dirs added

--- a/03 linksImages/index.html
+++ b/03 linksImages/index.html
@@ -7,5 +7,18 @@
     <link rel="stylesheet" href="style.css" />
     <title>Links And Images</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Click
+      <a
+        href="https://dzone.com/articles/html-5-reverse-ordered-lists"
+        target="_blank"
+        >here</a
+      >
+      to learn more about html lists.
+    </p>
+    <a href="pages/about.html">About</a>
+
+    <img src="images/dog.jpg" alt="Photo of a standing dog" />
+  </body>
 </html>
